# wazuh-client-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: agent_management.rs  basic_usage.rs  cluster_monitoring.rs  log_analysis.rs  rule_management.rs  syscollector_info.rs  vulnerability_detection.rs
nix/: devShell.nix
src/: client_factory.rs  indexer_client.rs  lib.rs  logs.rs  vulnerability.rs
